--- a/index.html
+++ b/index.html
@@ -4,35 +4,68 @@
 <!--[if IE 8]><html class=preIE9><![endif]-->
 <!--[if gte IE 9]><!--><html><!--<![endif]-->
   <head>
-    <meta charset=UTF-8>
-  <meta http-equiv=X-UA-Compatible content=IE=edge,chrome=1>
-  <meta name=viewport content=width=device-width,initial-scale=1>
+    <meta charset="UTF-8" />
+    <meta http-equiv=X-UA-Compatible content=IE=edge,chrome=1> <meta
+    name=viewport content=width=device-width,initial-scale=1>
     <title>title</title>
-  <meta name=author content=name>
-  <meta name=description content=description here>
-  <meta name=keywords content=keywords,here>
-  <link rel=stylesheet href=/css/normalize.css type=text/css>
-  <link rel=stylesheet href=/css/index.css type=text/css>
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,500,700&display=swap" rel="stylesheet">
+    <meta name="author" content="name" />
+    <meta name="description" content="description" here />
+    <meta name="keywords" content="keywords,here" />
+    <link rel=stylesheet href=/css/normalize.css type=text/css> <link
+    rel=stylesheet href=/css/index.css type=text/css>
+    <link
+      href="https://fonts.googleapis.com/css?family=Comfortaa:300,500,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-
     <main>
-      <h3>The rush you get when you find yourself inside a barrel is phenomenal.</h3>
+      <h3>
+        The rush you get when you find yourself inside a barrel is phenomenal.
+      </h3>
       <div class="main-img"></div>
       <div class="second-img"></div>
       <h1>Waves</h1>
       <div class="text-block-1">
-      <p class="text-1">Ipsum ut odit culpa earum possimus fuga, quaerat natus pariatur iste quas dolor et similique sed vitae minus quae, nobis fugiat. Officia. Corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ipsa impedit consequatur quisquam dicta in iste, eos iure magnam error neque architecto, laboriosam dolorem eius quod similique unde pariatur voluptates? </p>
-      <p class="text-2"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ipsa impedit consequatur quisquam dicta in iste, eos iure magnam error neque architecto, laboriosam dolorem ! </p>
-      <p class="text-3"> Id dolorum qui illo corrupti! Corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ipsa impedit consequatur quisquam dicta in iste, eos iure magnam error neque architecto, laboriosam dolorem eius quod similique unde. </p>
-    </div>
-      <blockquote> Ad accusantium sapiente beatae quis dolore quam, dolorum aspernatur repellendus facilis accusamus nostrum aperiam velit id natus quaerat assumenda eius dolor voluptas.</blockquote>
+        <p class="text-1">
+          Ipsum ut odit culpa earum possimus fuga, quaerat natus pariatur iste
+          quas dolor et similique sed vitae minus quae, nobis fugiat. Officia.
+          Corrupti! Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
+          ipsa impedit consequatur quisquam dicta in iste, eos iure magnam error
+          neque architecto, laboriosam dolorem eius quod similique unde pariatur
+          voluptates?
+        </p>
+        <p class="text-2">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Non ipsa
+          impedit consequatur quisquam dicta in iste, eos iure magnam error
+          neque architecto, laboriosam dolorem !
+        </p>
+        <p class="text-3">
+          Id dolorum qui illo corrupti! Corrupti! Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Non ipsa impedit consequatur quisquam
+          dicta in iste, eos iure magnam error neque architecto, laboriosam
+          dolorem eius quod similique unde.
+        </p>
+      </div>
+      <blockquote>
+        Ad accusantium sapiente beatae quis dolore quam, dolorum aspernatur
+        repellendus facilis accusamus nostrum aperiam velit id natus quaerat
+        assumenda eius dolor voluptas.
+      </blockquote>
       <div class="text-block-2">
-      <p class="text-4">Hic molestiae reprehenderit? Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta eos, asperiores explicabo ut dolore, et numquam hic beatae iste officiis laborum commodi. Autem assumenda facilis eos magnam ipsam, neque inventore!</p>
-      <p class="text-5">  Repudiandae provident eaque. Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, ad. Neque mollitia, molestiae ea modi officiis quam est repellat quasi, magni corrupti nulla blanditiis eaque saepe pariatur at illo veniam.</p>
-    </div>
+        <p class="text-4">
+          Hic molestiae reprehenderit? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Soluta eos, asperiores explicabo ut dolore, et
+          numquam hic beatae iste officiis laborum commodi. Autem assumenda
+          facilis eos magnam ipsam, neque inventore!
+        </p>
+        <p class="text-5">
+          Repudiandae provident eaque. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Officia, ad. Neque mollitia, molestiae ea modi
+          officiis quam est repellat quasi, magni corrupti nulla blanditiis
+          eaque saepe pariatur at illo veniam.
+        </p>
+      </div>
     </main>
-  
   </body>
 </html>
